--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kaori-waguri/fca-kaoriVip.git"
+    "url": "https://github.com/Vyfuyu/Fca-kaoriVip"
   }
 }
